--- a/validator/static/css/scheme.css
+++ b/validator/static/css/scheme.css
@@ -63,6 +63,21 @@
     background-color: rgba(71, 96, 229,.5);
 }
 
+.custom-switch .custom-control-input[name='ref-parametrised_filters']:disabled:checked ~ .custom-control-label::after {
+    visibility: hidden;
+}
+
+.custom-switch .custom-control-input[name='ref-parametrised_filters']:disabled:checked ~ .custom-control-label::before {
+    background-color: rgba(71, 96, 229, 1);
+    width: 1rem;
+    margin-left: 0.35rem;
+}
+
+
+.custom-switch .custom-control-input[name='ref-parametrised_filters']:disabled:checked+label{
+    color: #000;
+}
+
 .alert-danger {
     color: rgb(255, 108, 92);
     background-color: rgba(255, 108, 92, .15);
