return to ansync ajax for getting network info

--- a/validator/templates/validator/ismn_dialog.html
+++ b/validator/templates/validator/ismn_dialog.html
@@ -214,6 +214,7 @@
             $.ajax({
                 url: url,
                 data: {'version_id': versionId},
+                async: false,
                 success: function (return_data) {
                     data = return_data['network']
                 }
