async=false restored; .distinct(continents) changed to .values(continents).distinct() so that it should work on sqlite

--- a/validator/templates/validator/ismn_dialog.html
+++ b/validator/templates/validator/ismn_dialog.html
@@ -213,7 +213,7 @@
             $.ajax({
                 url: url,
                 data: {'version_id': versionId},
-                // async: false,
+                async: false,
                 success: function (return_data) {
                     data = return_data['network']
                 }
