Add button to (de)activate tcol

--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -91,6 +91,10 @@
                             <li>Validation metrics calculated from absolute values.</li>
                         {% endif %}
 
+                        <li>Triple collocation analysis was
+                            {% if val.tcol %} activated. {% else %} deactivated. {% endif %}
+                        </li>
+
                         <li>Scaling reference: {{ val.scaling_ref.dataset.pretty_name }} ({{ val.scaling_ref.version.pretty_name }}, {{ val.scaling_ref.variable.pretty_name }})
                                     [Filters:
                                     {% if not val.scaling_ref.filters.all and not val.scaling_ref.parametrisedfilter_set.all %}
