--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -345,7 +345,7 @@
                                     <h4 class="my-0 font-weight-normal">Metrics</h4>
                                     <div class="card-menu">
                                         <span class="input-group-text fas fa-question-circle help-icon"
-                                            title="Select metrics (groups) to calculate. Triple collocation needs 3 or more datasets."></span>
+                                            title="Specify metrics to calculate. Basic metrics between data set pairs are always calculated."></span>
                                         <a class="input-group-text" data-toggle="collapse" href="#metrics_collapse" role="button" aria-expanded="true" aria-controls="metrics_collapse">
                                             <span class="fa fa-plus-circle" title="Expand"></span>
                                             <span class="fa fa-minus-circle" title="Collapse"></span>
@@ -359,10 +359,11 @@
                                             <div class="row">
                                                  <div class="custom-control custom-switch">
                                                     <input id="tcol" class="custom-control-input" name="tcol" type="checkbox" disabled="true">
-                                                    <label class="custom-control-label" for="tcol">Include Triple Collocation Metrics</label>
+                                                    <label class="custom-control-label" for="tcol">Include Triple Collocation Metrics &nbsp;</label>
                                                  </div>
+
                                                 <span class="input-group-text fas fa-question-circle help-icon"
-                                                    title="Triple collocation analysis can only be activated if 3 or more datasets are selected.">
+                                                    title="Triple collocation analysis is only available if 3 or more data sets (including the reference) are selected.">
                                                 </span>
                                             </div>
                                         </div>
