Tcol GUI changes (#69)
* Make publishing test optional

* Add plots from qa4sm-reader, make reference ds id always 0

* Update conda creation script with packages for plotting

* Fix dataset pairs for GUI, add dependencies

* Update ismn version

* Remove test skipping and install pytesmo from github for now

* Dont skip tests for n ow

* Make 2 tests that need DOI token optional

* Add os

* Set model attr that indicates new dataset order

* Update model

* Derive pair names from plot files directly

* Update map description

* Center mapplot

* Add TCol and plots

* Add tc test

* Update env file

* Add button to (de)activate tcol

* Activate tcol switch in test

* Formatting changes

--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -91,6 +91,10 @@
                             <li>Validation metrics calculated from absolute values.</li>
                         {% endif %}
 
+                        <li>Triple collocation analysis was
+                            {% if val.tcol %} activated. {% else %} deactivated. {% endif %}
+                        </li>
+
                         <li>Scaling reference: {{ val.scaling_ref.dataset.pretty_name }} ({{ val.scaling_ref.version.pretty_name }}, {{ val.scaling_ref.variable.pretty_name }})
                                     [Filters:
                                     {% if not val.scaling_ref.filters.all and not val.scaling_ref.parametrisedfilter_set.all %}
@@ -234,6 +238,19 @@
 
 {% block javascript %}
 <script type="text/javascript">
+
+    function fileExists(urlToFile) {
+        var xhr = new XMLHttpRequest();
+        xhr.open('HEAD', urlToFile, false);
+        xhr.send();
+
+        if (xhr.status == "404") {
+            return false;
+        } else {
+            return true;
+        }
+    }
+
     function changeBoxplot(metric) {
         var metric = $("#id_graph_metric").val()
         var labels = {{json_metrics|safe}}
@@ -257,11 +274,20 @@
         } else {
             overview_url = '{{ val.output_dir_url }}' + 'overview_' + pair + '_' + metric + '.png';
         }
+
+        var map_exists = fileExists(overview_url);
+
+        if (map_exists == false) {
+            overview_label = 'Please change metric and/or data set group.';
+            overview_url = "javascript:void(0)";
+            $("#id_overview_link").attr("href", "javascript:void(0)");
+        } else {
+            $("#id_overview").attr("title", overview_label);
+        }
         $("#id_overview").attr("src", overview_url);
-        $("#id_overview").attr("alt", overview_label);
-        $("#id_overview").attr("title", overview_label);
         $("#id_overview_link").attr("href", overview_url);
         $("#id_overview_label").html(overview_label);
+        $("#id_overview").attr("alt", "No map for the selected metric / data set combination found.");
     }
 
     // change the plots when the selection of metric and/or dataset pair is changed
