--- a/validator/templates/widgets/filter_checkbox_option.html
+++ b/validator/templates/widgets/filter_checkbox_option.html
@@ -4,14 +4,17 @@
 
 <div class="custom-control custom-switch">
     <input class="custom-control-input"
-           {% if widget.parameterised  %} id="{{ widget.attrs.id }}_p" {% else %} id="{{ widget.attrs.id }}"  {% endif %}
+           {% if widget.parameterised  %} id="{{ widget.attrs.id }}_checkbox" {% else %} id="{{ widget.attrs.id }}"  {% endif %}
            value="{{ widget.value|stringformat:'s' }}" name="{{ widget.name }}"
         type="checkbox" {% include "django/forms/widgets/attrs.html" %} {% if widget.parameterised  %} checked disabled {% endif %}
     >
     {% if widget.parameterised  %}
+        <label class="custom-control-label" for="{{ widget.attrs.id }}_checkbox">{{ widget.label }}</label>
         <input type="hidden" id="{{ widget.attrs.id }}" value="{{ widget.value|stringformat:'s' }}" name="{{ widget.name }}">
+    {% else %}
+        <label class="custom-control-label" for="{{ widget.attrs.id }}">{{ widget.label }}</label>
     {% endif %}
-    <label class="custom-control-label" for="{{ widget.attrs.id }}">{{ widget.label }}</label>
+
     {% if widget.parameterised  %}
         <a id="{{ widget.attrs.id }}_link" href="#{{ widget.dialog_name }}" data-toggle="modal" data-target="#{{ widget.dialog_name }}">select...</a>
     {% endif %}
